# umadb

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark-sweeps.yml  build-and-release-python-client-wheels-and-sdist.yml  build-and-release-server-binaries-and-docker-images.yml  python-client.yml  release.yml  rust.yml  wip-ci.yml  wip-publish-crate.yml
scripts/: plot_duplicate_check.py  sweep_read_bench_across_read_method_and_page_cache_max_pages.py  sweep_read_bench_across_read_method_and_page_cache_sizes.py  sweep_read_cond_bench_across_read_method_and_page_cache_max_pages.py  sweep_read_cond_bench_across_read_method_and_page_cache_sizes.py
tests-integration/: Cargo.toml
tests-integration/fixtures/: uma.db.schema_version_0.zst
tests-integration/tests/: api_key.rs  client_methods.rs  event_store_test.rs  grpc_stream_interface_test.rs  grpc_streaming_test.rs  grpc_subscribe_methods_test.rs  health_check.rs  next_batch_behaviour.rs  path_rewrite_test.rs  schema_version_0_compat_test.rs  secure_grpc.rs  subscription_head_test.rs  tracking_grpc.rs  unconditional_append_hotspot.rs
umadb/: Cargo.toml  README.md
umadb-benches/: Cargo.toml
umadb-benches/benches/: duplicate_check_bench.rs  grpc_append_bench.rs  grpc_append_bench_plot.py  grpc_append_cond_bench.rs  grpc_append_cond_bench_plot.py  grpc_append_sustained_plot.py  grpc_append_throughput_vs_writers_bench.rs  grpc_append_throughput_vs_writers_bench_plot.py  grpc_append_with_readers_bench.rs  grpc_append_with_readers_bench_plot.py  grpc_read_bench.rs  grpc_read_bench_plot.py  grpc_read_cond_bench.rs  grpc_read_cond_bench_plot.py  grpc_read_flame.rs  grpc_read_with_writers_bench.rs  grpc_read_with_writers_bench_plot.py  header_node_bench.rs  metadata_container_bench.rs  mvcc_commit_flame_at_large_volume.rs  page_approx_deserialized_bytes_bench.rs  page_deserialize_bench.rs
umadb-benches/src/: lib.rs  server_helper.rs
umadb-client/: Cargo.toml  README.md
umadb-client/examples/: client_async_insecure.rs  client_async_secure.rs  client_sync_insecure.rs  client_sync_secure.rs
umadb-client/src/: lib.rs
umadb-core/: Cargo.toml  README.md
umadb-core/src/: common.rs  db.rs  events_tree.rs  events_tree_nodes.rs  free_lists_tree_nodes.rs  header_node.rs  lib.rs  mvcc.rs  node.rs  page.rs  pager.rs  slice_reader.rs  tags_tree.rs  tags_tree_nodes.rs  tracking_tree_nodes.rs
umadb-core/tests/: mmap_tests.rs  tracking_append_batch_tests.rs
umadb-dcb/: Cargo.toml  README.md
umadb-dcb/src/: lib.rs
umadb-proto/: Cargo.toml  README.md  build.rs  umadb.proto
umadb-proto/proto/v1/: umadb.proto
umadb-proto/src/: lib.rs
umadb-python/: Cargo.toml  README.md  pyproject.toml  umadb.pyi
umadb-python/examples/: basic_usage.py  readme_snippets.py
umadb-python/python/: umadb_server_cli.py
umadb-python/python/umadb/: __init__.py  __init__.pyi  _umadb.pyi  umadb_server_cli.py
umadb-python/src/: lib.rs
umadb-server/: Cargo.toml  README.md
umadb-server/src/: lib.rs
umadb-tools/: Cargo.toml
umadb/src/: lib.rs
