[package]
name = "umadb-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.1.29"}
umadb-core = { path = "../umadb-core", version = "0.1.29"}
umadb-client = { path = "../umadb-client", version = "0.1.29"}
umadb-server = { path = "../umadb-server", version = "0.1.29"}
futures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
criterion = { version = "0.7.0", features = ["html_reports", "csv_output"] }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
uuid = { version = "1.18.1", features = ["v4"] }
clap = { version = "4.5.51", features = ["derive"] }

[package.metadata.release]
release = false

[[bench]]
name = "grpc_read_bench"
harness = false

[[bench]]
name = "grpc_read_cond_bench"
harness = false

[[bench]]
name = "grpc_read_flame"
harness = false

[[bench]]
name = "grpc_append_bench"
harness = false

[[bench]]
name = "grpc_read_with_writers_bench"
harness = false

[[bench]]
name = "grpc_append_with_readers_bench"
harness = false

[[bench]]
name = "grpc_append_cond_bench"
harness = false

[[bench]]
name = "header_node_bench"
harness = false

[[bench]]
name = "mvcc_commit_bench"
harness = false

[[bench]]
name = "mvcc_commit_flame"
harness = false

[[bench]]
name = "mvcc_commit_flame_at_large_volume"
harness = false

[[bench]]
name = "event_leaf_node_bench"
harness = false

[[bin]]
name = "throughput_vs_volume"
path = "src/bin/throughput_vs_volume.rs"
