[package]
name = "umadb-client"
version = {workspace = true}
edition = { workspace = true }
license = { workspace = true }
description = "gRPC client library for UmaDB event store"
repository = "https://github.com/umadb-io/umadb"
keywords = ["event-store", "grpc", "client"]
categories = ["database", "network-programming"]

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.1.22" }
umadb-proto = { path = "../umadb-proto", version = "0.1.22" }
uuid = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
