[package]
name = "umadb-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC client library for UmaDB event store"
readme = "README.md"
keywords = ["event-store", "grpc", "client"]
categories = ["database", "network-programming"]

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.1.29" }
umadb-proto = { path = "../umadb-proto", version = "0.1.29" }
uuid = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
