[package]
name = "umadb-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Core event store implementation for UmaDB"
repository = "https://github.com/umadb-io/umadb"
readme = "README.md"
keywords = ["event-store", "event-sourcing", "database"]
categories = ["database"]

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.1.24" }
crc32fast = "1"
dashmap = "6"
itertools = "0.14"
uuid = { workspace = true }
libc = { workspace = true }
memmap2 = "0.9"
rand = "0.9"
byteorder = "1"
bitflags = "2"
nix = { version = "0.30", features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
