[package]
name = "umadb-dcb"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Dynamic Consistency Boundary (DCB) API - Core types and traits for UmaDB event store"
repository = "https://github.com/umadb-io/umadb"
readme = "README.md"
keywords = ["event-store", "event-sourcing", "database", "dcb"]
categories = ["database"]

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
futures-core = "0.3"
futures-util = "0.3"
async-trait = { workspace = true }
