[package]
name = "umadb-dcb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dynamic Consistency Boundary (DCB) API - Core types and traits for UmaDB event store"
readme = "README.md"
keywords = ["event-store", "event-sourcing", "database", "dcb"]
categories = ["database"]

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
futures-core = "0.3"
futures-util = "0.3"
async-trait = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "uuid/serde"]
