[package]
name = "umadb-proto"
version = {workspace = true}
edition = { workspace = true }
license = { workspace = true }
description = "Protocol buffer definitions and gRPC service for UmaDB event store"
repository = "https://github.com/umadb-io/umadb"
keywords = ["event-store", "grpc", "protobuf"]
categories = ["database", "network-programming"]

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.1.22" }
prost = "0.14.1"
tonic-prost = "0.14.2"
tonic = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
#protobuf-src = "2.1.1"

