[package]
name = "umadb-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Protocol buffer definitions and gRPC service for UmaDB event store"
readme = "README.md"
keywords = ["event-store", "grpc", "protobuf"]
categories = ["database", "network-programming"]

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.3.0" }
prost = "0.14.1"
tonic-prost = "0.14.2"
tonic = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
#protobuf-src = "2.1.1"

