[package]
name = "umadb-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for UmaDB event store client"
keywords = ["event-store", "grpc", "client", "python"]
categories = ["database", "network-programming"]
publish = false

[package.metadata.release]
release = false

[lib]
name = "umadb_python"
crate-type = ["cdylib"]

[dependencies]
umadb-client = { path = "../umadb-client", version = "0.4.0" }
umadb-dcb = { path = "../umadb-dcb", version = "0.4.0" }
pyo3 = { version = ">=0.24", features = ["abi3-py310", "extension-module"] }
uuid = { version = "1.18.1", features = ["v4"] }
pyo3-stub-gen = "0.17.2"
pyo3-stub-gen-derive = "0.17.2"
