[package]
name = "umadb-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for UmaDB event store client"
keywords = ["event-store", "grpc", "client", "python"]
categories = ["database", "network-programming"]
publish = false

[package.metadata.release]
release = false

[lib]
name = "umadb"
crate-type = ["cdylib", "rlib"]

[dependencies]
umadb-client = { path = "../umadb-client", version = "0.5.1" }
umadb-dcb = { path = "../umadb-dcb", version = "0.5.1" }
pyo3 = { version = ">=0.28", features = ["abi3-py310"] }
uuid = { version = "1.23", features = ["v4"] }
pyo3-stub-gen = "0.22"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[[bin]]
name = "stub_gen"
doc = false