[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "umadb"
version = "0.3.3"
description = "Python client for UmaDB event store"
authors = [
    { "name" = "John Bywater", "email" = "john.bywater@appropriatesoftware.net" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
keywords = ["event-store", "grpc", "client", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://umadb.io"
Repository = "https://github.com/umadb-io/umadb"

[tool.maturin]
python-source = "python"
module-name = "umadb._umadb"
bindings = "pyo3"
strip = true
