[package]
name = "umadb-server"
description = "gRPC server implementation for UmaDB event store"
repository = "https://github.com/umadb-io/umadb"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["event-store", "grpc", "server"]
categories = ["database", "network-programming"]

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.1.24" }
umadb-core = { path = "../umadb-core", version = "0.1.24" }
umadb-proto = { path = "../umadb-proto", version = "0.1.24" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1.14"
async-trait = { workspace = true }
