[package]
name = "umadb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC server implementation for UmaDB event store"
readme = "README.md"
keywords = ["event-store", "grpc", "server"]
categories = ["database", "network-programming"]

[dependencies]
umadb-dcb = { path = "../umadb-dcb", version = "0.4.0" }
umadb-core = { path = "../umadb-core", version = "0.4.0" }
umadb-proto = { path = "../umadb-proto", version = "0.4.0" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1.14"
async-trait = { workspace = true }
tower = "0.5.2"
