[package]
name = "umadb-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tools for UmaDB databases (integrity checks, utilities)."
keywords = ["event-store", "event-sourcing", "database"]
categories = ["database"]


# We provide multiple binaries under this crate; for now only umadb-check
[[bin]]
name = "umadb-check"
path = "src/bin/umadb-check.rs"

[dependencies]
umadb-core = { path = "../umadb-core", version = "0.4.0" }
umadb-dcb = { path = "../umadb-dcb", version = "0.4.0" }
