[package]
description = "Event store built for Dynamic Consistency Boundaries"
name = "umadb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
umadb-server = { path = "../umadb-server", version = "0.1.22" }
clap = { version = "4.5.6", features = ["derive"] }
tokio = { workspace = true }

[[bin]]
name = "umadb"
path = "src/bin/umadb.rs"
