[package]
description = "Event store built for Dynamic Consistency Boundaries"
name = "umadb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["event-store", "event-sourcing", "database", "dcb"]
categories = ["database", "command-line-utilities"]

[dependencies]
umadb-server = { path = "../umadb-server", version = "0.1.26" }
clap = { version = "4.5.6", features = ["derive"] }
tokio = { workspace = true }

[[bin]]
name = "umadb"
path = "src/bin/umadb.rs"
