[package]
name = "umadb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Event store built for Dynamic Consistency Boundaries"
readme = "README.md"
keywords = ["event-store", "event-sourcing", "database", "dcb"]
categories = ["database", "command-line-utilities"]

[dependencies]
umadb-server = { path = "../umadb-server", version = "0.3.2" }
clap = { version = "4.5.6", features = ["derive"] }
tokio = { workspace = true }

[[bin]]
name = "umadb"
path = "src/bin/umadb.rs"
